test: add AlertRule repository tests
- Created AlertRuleRepositoryTest.java with JPA unit tests using @DataJpaTest
- Added three test methods:
  - shouldSaveAndRetrieveAlertRule: Tests basic CRUD operations
  - shouldFindEnabledAlertRules: Tests findByEnabledTrue() method
  - shouldDeleteAlertRule: Tests deletion functionality
- Used TestEntityManager for database operations
- Used TestDataProvider for test data creation
- Added proper imports including assertThat from AssertJ

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>